04_results/Summary/envoy_filter_proof_mtls1_2_20260711_150435.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1alpha3","kind":"EnvoyFilter","metadata":{"annotations":{},"name":"force-downgrade-httpbin-server","namespace":"default"},"spec":{"configPatches":[{"applyTo":"FILTER_CHAIN","match":{"context":"SIDECAR_INBOUND"},"patch":{"operation":"MERGE","value":{"transport_socket":{"name":"envoy.transport_sockets.tls","typed_config":{"@type":"type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext","common_tls_context":{"tls_params":{"cipher [...]
  creationTimestamp: "2026-07-11T12:30:36Z"
  generation: 1
  name: force-downgrade-httpbin-server
  namespace: default
  resourceVersion: "898"
  uid: 3b550655-5cfa-4a67-92af-26c019c222fe
spec:
  configPatches:
  - applyTo: FILTER_CHAIN
    match:
      context: SIDECAR_INBOUND
    patch:
      operation: MERGE
      value:
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            common_tls_context:
              tls_params:
                cipher_suites:
                - AES128-SHA
                tls_maximum_protocol_version: TLSv1_2
                tls_minimum_protocol_version: TLSv1_2
  workloadSelector:
    labels:
      app: httpbin
